chore(initial config): add initial config, style variables and icons

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,12 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+$mainFont: "Inter", serif;
+$darkBlue: #161B23;
+$yellow: #F6E767;
+$softGreen: #6ECABF;
+$softRed: #EE6F6B;
+$lightGray: #BBC3D1;
+$veryLightGrayishBlue: #F4F4F4;
