--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,5 @@
+@use "./scss/index.scss" as *;
+
 /*
  * App Global CSS
  * ----------------------------------------------------------------------------
@@ -34,4 +36,16 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+/* @import "@ionic/angular/css/palettes/dark.system.css"; */
+
+* {
+  padding: 0;
+  margin: 0;
+  border: none;
+  box-sizing: border-box;
+  font-family: $mainFont;
+}
+
+html {
+  font-size: 62.5%;
+}
