feat(transaction list): adicionar lista de transações na página home

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,17 +9,16 @@
     <div class="credit-cards-wrapper">
 
       <app-credit-card 
-        *ngFor="let card of cardsList()" 
-        [type]="card.type" 
-        [value]="card.value" 
-        [title]="card.title" 
+        *ngFor="let card of cardsList()"
+        [type]="card.type"
+        [value]="card.value"
+        [title]="card.title"
         [last_modify]="card.last_modify">
       </app-credit-card>
 
-      <!-- <app-credit-card type="total" [value]="420000"></app-credit-card>
-      <app-credit-card type="entradas" [value]="420000"></app-credit-card>
-      <app-credit-card type="saidas" [value]="420000"></app-credit-card> -->
     </div>
 
+    <app-transactions-list></app-transactions-list>
+    
   </div>
 </ion-content>
