--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+
+      <ion-tab-button>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button>
+      <ion-label>Categories</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button>
+        <ion-label>User</ion-label>
+      </ion-tab-button>
+
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
